[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-cron"
version = "0.1.0"
description = "基于 Redis ZSET 的分布式定时任务调度库"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "fakeredis[lua]>=2.20.0",
]
